--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:theme="@style/Theme.Instagram_Clone"
         tools:targetApi="31">
 
-
-
+        <!-- MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -24,15 +23,19 @@
             </intent-filter>
         </activity>
 
+        <!-- LoginActivity -->
         <activity
             android:name=".LoginActivity"
             android:exported="true">
         </activity>
 
+        <!-- SignInActivity -->
         <activity
             android:name=".SignInActivity"
             android:exported="true">
         </activity>
+
+        <!-- HomeActivity -->
         <activity
             android:name=".HomeActivity"
             android:label="Home"
@@ -43,5 +46,17 @@
             </intent-filter>
         </activity>
 
-</application>
-    </manifest>
+        <!-- SearchActivity -->
+        <activity
+            android:name=".SearchActivity"
+            android:exported="true">
+        </activity>
+
+        <!-- ProfileActivity -->
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="true">
+        </activity>
+
+    </application>
+</manifest>
